Improve the Database configuration and access

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,6 +15,7 @@ jwt {
     audience = "g8"
     realm = "G8 Tools"
 }
-h2{
-    jdbcUrl = "jdbc:h2:file:./build/db"
+storage {
+    driverClassName = "org.h2.Driver"
+    jdbcURL = "jdbc:h2:file:./db/g8-db"
 }
