--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ ktor_version=2.3.7
 kotlin_version=1.9.22
 logback_version=1.4.14
 kotlin.code.style=official
+koinKtor_version=3.5.3
+hikaricp_version=5.1.0
