--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -64,23 +64,6 @@ paths:
             text/plain:
               schema:
                 type: "string"
-    post:
-      summary: Creates a user.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-            example:
-              id: 1
-              firstName: 'Alice'
-              lastName: 'Fox'
-              email: 'afox@g8.org'
-              password: 'pwd'
-      responses:
-        '201':
-          description: Created
   /api/user/{id}/subscription:
     get:
       summary: "Get active subscription for the authenticated user"
@@ -105,7 +88,24 @@ paths:
                 $ref: '#/components/schemas/Subscription'
         "401":
           $ref: '#/components/responses/UnauthorizedError'
-  /api/auth:
+  /api/signup:
+    post:
+      summary: Creates a user.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignupRequestViewModel'
+            example:
+              firstName: 'Alice'
+              lastName: 'Fox'
+              email: 'afox@g8.org'
+              password: 'pwd'
+      responses:
+        '201':
+          description: Created
+  /api/login:
     post:
       summary: Authenticate and get a JWT.
       requestBody:
@@ -120,6 +120,10 @@ paths:
       responses:
         '201':
           description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignInResponseViewModel'
         '400':
           description: Authentication failed
 
@@ -178,5 +182,23 @@ components:
       type: object
       properties:
         Message:
+          type: string
+    SignupRequestViewModel:
+      type: object
+      properties:
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+    SignInResponseViewModel:
+      type: object
+      properties:
+        authToken:
+          type: string
+        refreshToken:
           type: string
 
